--- a/carbon-main/index.css
+++ b/carbon-main/index.css
@@ -12,24 +12,29 @@ body{
 
 /* section1 */
 .sec1{
-    border: thin solid black;
+    /* border: thin solid black; */
     background-image: linear-gradient(to right, #2C1762 52%, #E10773);
     width: 100%;
 }
 
 .container{
-    border: thin solid teal;
+    /* border: thin solid teal; */
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 12rem;
+    gap: rem;
     /* flex-wrap: wrap; */
     /* width: 95%; */
 }
 
 .txt1{
-    border: thin solid goldenrod;
+    /* border: thin solid goldenrod; */
     padding-left: 30px;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
 }
 
 .bank{
@@ -48,7 +53,7 @@ body{
     font-size: 25px;
     font-weight: 400;
     color: white;
-    margin-top: 30px;
+    margin-top: 2em;
     margin-bottom: 30px;
 }
 
@@ -56,6 +61,7 @@ body{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-top: 3em;
 }
 
 .CBN .nig{
@@ -80,22 +86,246 @@ body{
 
 /* sec1-right-side */
 .imgcon{
-    border: thin solid tomato;
+    /* border: thin solid tomato; */
     position: relative;
+    width: 50%;
+    padding-top: 2em;
 }
 
 .sna1{
-    width: 400px;
+    width: 500px;
     position: absolute;
     margin-left: 110px;
+    margin-top: 40px;
 }
 
 .lady{
-    width: 300px;
+    width: 500px;
     position: relative;
+    margin-left: -1em;
+    /* margin-top: 6em; */
+    margin-bottom: -1.3em;
 }
 
 .mon{
+    width: 500px;
+    position: relative;
+    margin-top: -9rem;
+}
+
+/* section2 */
+.sec2{
+    /* border: thin solid tomato; */
+    background-color: #F7F3FF;
+    margin-top: 20px;
+}
+
+.container2{
+    /* border: thin solid brown; */
+}
+
+.wrapper{
+    /* border: thin solid blue; */
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.txt2{
+    /* border: thin solid teal; */
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.txt2 h2{
+    font-size: 40px;
+    color: #2C1762;
+}
+
+.pic{
+    /* border: thin solid black; */
+    position: relative;
+}
+
+.star{
+    width: 150px;
+    position: absolute;
+    margin-left: 180px;
+    padding-top: 13px;
+}
+
+.girls{
+    width: 300px;
+    position: relative;
+    padding-top: 2em;
+    /* border-top-left-radius: 10px; */
+    /* border-top-right-radius: 10px; */
+}
+
+/* section3 */
+.sec3{
+    /* border: thin solid green; */
+}
+
+.container3{
+    /* border: thin solid tomato; */
+}
+
+.wrapper1{
+    /* border: thin solid teal; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 70%;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+    padding: 20px 30px 20px 0;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 5px 11px -7px #b48cfc4d, 0 7px 20px -6px #ff04754d;
+    margin-top: -20px;
+    position: relative;
+}
+
+.trans{
+    border: thin solid #CECECE;
+    padding: 30px 30px 30px 50px;
+    border-bottom: none;
+    border-top: none;
+    border-left: none;
+    /* padding: 50px 150px 50px 50px; */
+}
+
+.trf{
+    /* border: thin solid blue; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    /* padding: 50px; */
+}
+
+.icontrf{
+    width: 50px;
+    background-color: #FF0475;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.cred{
+    border: thin solid #CECECE;
+    border-bottom: none;
+    border-top: none;
+    border-left: none;
+    padding: 30px 30px 30px 0px;
+}
+
+.credit{
+    /* border: thin solid black; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-left: -10px;
+}    
+
+.cre{
+    width: 50px;
+    background-color: #4EF1E0;
+    padding: 10px;
+    border-radius: 5px;    
+}
+
+.inter{
+    /* border: thin solid darkmagenta; */
+    /* padding: 40px 40px 40px 40px; */
+}
+
+.interest{
+    /* border: thin solid green; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;    
+    gap: 20px;
+    align-items: center;
+    margin-left: -10px;
+}
+
+.int{
+    width: 50px;
+    height: 50px;
+    background-color: #B48CFC;
+    padding: 18px 15px 18px 15px;
+    border-radius: 5px;
+    /* padding-top: 5px;     */
+}
+
+a{
+    text-decoration: none;
+}
+
+/* section4 */
+.sec4{
+    border: thin solid red;
+}
+
+.container4{
+    border: thin solid blue;
+}
+
+.wrapper4{
+    border: thin solid green;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+/* section4-right-side */
+.txt4{
+    border: thin solid purple;
+}
+
+.txt4 h2{
+    font-size: 40px;
+    color: #2C1762;
+}
+
+.txt4 p{
+    font-size: 18px;
+    color: #5A617C;
+}
+
+.imgdiv4{
+    border: thin solid firebrick;
+}
+
+.imgw{
+    width: 100px;
+    position: absolute;
+    z-index: -1;
+    margin-left: 250px;
+}
+
+.imgs{
+    width: 300px;
+    /* z-index: -1; */
+    margin-top: 30px;
+    box-shadow: 5px 5px 0 0 #FF0475;
+    border-radius: 10px;
+}
+
+.imgc{
     width: 200px;
     position: relative;
+    margin-left: -260px;
+    margin-bottom: -60px;
 }
